[gd_scene load_steps=5 format=3 uid="uid://dm67uev62iu77"]

[ext_resource type="Script" path="res://Scripts/end_screen.gd" id="1_w5d7w"]
[ext_resource type="Texture2D" uid="uid://dh78rrprmhwox" path="res://Assets/ludo_board.png" id="2_vtsrg"]
[ext_resource type="Texture2D" uid="uid://csfwcaj1nubgo" path="res://Assets/End Screen/A_WINNER_IS_YOU.png" id="3_7eecs"]
[ext_resource type="Texture2D" uid="uid://cba8ws6rfdjl" path="res://Assets/End Screen/player_blank.png" id="4_v6dt6"]

[node name="End Screen" type="Node2D"]
script = ExtResource("1_w5d7w")

[node name="LudoBoard" type="Sprite2D" parent="."]
visible = false
position = Vector2(490, 490)
texture = ExtResource("2_vtsrg")
metadata/_edit_lock_ = true

[node name="WinnerScreen" type="Sprite2D" parent="."]
position = Vector2(490, 490)
texture = ExtResource("3_7eecs")
metadata/_edit_lock_ = true

[node name="Player _ WINS" type="Label" parent="."]
offset_left = 344.0
offset_top = 409.0
offset_right = 614.0
offset_bottom = 446.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "Player                   WINS!"
metadata/_edit_lock_ = true

[node name="PlayerColor" type="Sprite2D" parent="."]
position = Vector2(494, 424)
texture = ExtResource("4_v6dt6")
metadata/_edit_lock_ = true

[node name="ContinueButton" type="Button" parent="."]
custom_minimum_size = Vector2(320, 0)
offset_left = 330.0
offset_top = 490.0
offset_right = 650.0
offset_bottom = 521.0
disabled = true
text = "Continue match for remaining players"

[node name="PlayAgainButton" type="Button" parent="."]
custom_minimum_size = Vector2(320, 0)
offset_left = 329.0
offset_top = 539.0
offset_right = 649.0
offset_bottom = 570.0
text = "Play Again"

[node name="ExitButton" type="Button" parent="."]
custom_minimum_size = Vector2(320, 0)
offset_left = 329.0
offset_top = 588.0
offset_right = 649.0
offset_bottom = 619.0
text = "Exit"

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_play_again_press"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_pressed"]
